# territories

./: .env-exemple  .gitignore  LLM.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  test_load_tree.ipynb
.github/workflows/: tests.yml  upload.yml
docs/: tree.txt  tree_large.gzip  usage.ipynb
profiles/: profile_from_names.py
src/territories/: __init__.py  build_tree.py  database.py  exceptions.py  partitions.py  territories-test.py  territories.py  test_territories.ipynb  tree_creation.py
src/territories/data/: epci_to_comm.json
tests/: big_territory.gzip  big_territory.txt  build_from_db.py  build_test_tree.py  entities.gzip  full_territorial_tree.gzip  test_algorithms.py  test_build_tree.py  test_data.py  test_imports.py  test_interface.py  test_json_encoding.py  test_load_tree.ipynb  test_operators.py  test_territories.ipynb
