[project]
name = "territories"
version = "0.1.11"
authors = [{ name = "Timo", email = "timothee@datapolitics.fr" }]
description = "Manage territories."
readme = "README.md"
requires-python = ">=3.10"


dependencies = [
    "rustworkx>=0.16.0",
    "python-dotenv",
    "more-itertools~=10.5.0",
    "json-fix==1.0.0",
]


[project.optional-dependencies]
pydantic = ["pydantic>=2.0.0"]
postgres = ["psycopg2-binary>=2.9.10"]


[project.urls]
Homepage = "https://github.com/datapolitics/territories"


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.10.6",
    "pytest>=8.3.4",
    "pytest-benchmark>=5.1.0",
]


[[tool.uv.index]]
name = "datapolitics-index"
url = "http://pypi.hedwige.fr:8080"
publish-url = "http://pypi.hedwige.fr:8080"
allow-insecure-host = ["http://pypi.hedwige.fr:8080"]
