[project]
name = "territories"
version = "0.3.0"
authors = [{ name = "Timo", email = "timothee@datapolitics.fr" }]
description = "Manage territories."
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "rustworkx>=0.16.0",
    "python-dotenv",
    "more-itertools>=10.5.0",
    "json-fix==1.0.0",
]


[project.optional-dependencies]
pydantic = ["pydantic>=2.0.0"]
async = ["aioitertools>=0.12.0"]

[project.urls]
Homepage = "https://github.com/datapolitics/territories"


# does not include data/ folder by default
# [build-system]
# requires = ["setuptools>=61.0"]
# build-backend = "setuptools.build_meta"


[build-system]
requires = ["uv_build>=0.7.19,<0.8.0"]
build-backend = "uv_build"


[dependency-groups]
dev = [
    "asyncpg>=0.30.0",
    "ipykernel>=6.29.5",
    "psycopg>=3.2.9",
    "pydantic>=2.10.6",
    "pytest-asyncio>=1.1.0",
    "pytest>=8.3.4",
    "pytest-benchmark>=5.1.0",
]


[[tool.uv.index]]
name = "datapolitics"
url = "http://pypi.hedwige.fr:8080"
publish-url = "http://pypi.hedwige.fr:8080"
allow-insecure-host = ["http://pypi.hedwige.fr:8080"]
